# movie-review-stats

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tmdb.py  train.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: ChartControls.jsx  CustomTooltip.jsx  EmptyState.jsx  MovieCard.jsx  MovieHeader.jsx  ScoreScatter.jsx  SearchBar.jsx  SentimentArc.jsx
frontend/src/hooks/: useMovieReviews.js  useSearchMovies.js
frontend/src/utils/: chartExport.js  sentiment.js  stats.js
