[project]
name = "hf-training"
version = "0.1.0"
description = "Fine-tune DistilBERT on SST-2 sentiment classification"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "evaluate>=0.4.1",
    "accelerate>=0.29.0",
    "scikit-learn>=1.4.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
]
